--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -91,15 +91,10 @@
                           <ul id="bottom-main-nav" >
                               <li id="mutual"><a routerLink="/myport" title="My Port">My Port <span class="icon"></span></a></li>
                               <li id="private"><a routerLink="/transaction" title="กองทุนส่วนบุคคล">ทำรายการ<span class="icon"></span></a></li>
-                              <li id="provident"><a href="/ProvidentFund" title="กองทุนสำรองเลี้ยงชีพ">RMF/LTF<span class="icon"></span></a></li>
-                              <li id="property"><a href="/PropertyFund" title="กองทุนรวมอสังหาริมทรัพย์ REIT">รายงาน<span class="icon"></span></a></li>
-                              <li id="investor"><a href="/Investment" title="บริการนักลงทุน">รายการแบบประจำ <span class="icon"></span></a>
-                                  <!-- <ul>
-                                      <li><a href="#" title="">Sub Menu 1</a></li>
-                                      <li><a href="#" title="">Sub Menu 2</a></li>
-                                  </ul> -->
-                              </li>
-                              <li id="news"><a href="/News" title="ข่าวสารและกิจกรรม">ข้อมูลส่วนตัว <span class="icon"></span></a></li>
+                              <li id="provident"><a routerLink="/rmf-ltf" title="กองทุนสำรองเลี้ยงชีพ">RMF/LTF<span class="icon"></span></a></li>
+                              <li id="property"><a routerLink="/report" title="กองทุนรวมอสังหาริมทรัพย์ REIT">รายงาน<span class="icon"></span></a></li>
+                              <li id="investor"><a routerLink="/regular-list" title="บริการนักลงทุน">รายการแบบประจำ <span class="icon"></span></a></li>
+                              <li id="news"><a routerLink="/profile" title="ข่าวสารและกิจกรรม">ข้อมูลส่วนตัว <span class="icon"></span></a></li>
                           </ul>                           
                       </div>
                       <!-- <div class="header-clicker">
