--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,12 +1,12 @@
-/* .test {
+.test {
     color: red;
 }
- .top-menu-wrapper{
+#header .top-menu-wrapper{
     display: none !important;
 }
-.bottom-menu-wrapper{
+#header .bottom-menu-wrapper{
     display: none !important;
 }
 .footer_sub{
     display: none !important;
-} */
+}
