--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -42,7 +42,7 @@
 											<div class="contact-form-wrapper">
 												<form>
 													<div class="row">
-														<div class="col-sm-12 mb-3">
+														<div class="col-sm-12">
 															<p>ชื่อผู้เข้าระบบ
 															</p>
 															<div class="input-wrapper">
@@ -70,7 +70,7 @@
 															</p>
 														</div>
 													</div>
-													<div class="row pb-4">
+													<div class="row">
 														<div class="col-md-6 col-sm-6">
 															<p>กรุณากรอกรหัสเพื่อยืนยันตัวตน
 															</p>
@@ -102,7 +102,7 @@
 													<div class="row">
 														<div class="col-md-6">
 															<div class="btn-wrapper-left">
-																<button class="btn-med btn-light" (click)="checkpage('submit')" [routerLink]="['/myport']">
+																<button class="btn-med btn-light width50" (click)="checkpage('submit')" [routerLink]="['/myport']">
 																	<p>
 																		เข้าสู่ระบบ
 																		<i class="fa fa-angle-right" aria-hidden="true"></i>
@@ -164,7 +164,7 @@
 											</div>
 											<div class="contact-form-wrapper">
 												<form>
-													<div class="row mb-3">
+													<div class="row">
 														<div class="col-sm-12 mb-2">
 															<p>ชื่อผู้เข้าระบบ
 
@@ -173,7 +173,7 @@
 																<input id="name" name="name" maxlength="30" type="text">
 															</div>
 														</div>
-														<div class="col-sm-12 mb-2">
+														<div class="col-sm-12">
 															<p>เลขบัตรประจำตัว
 
 															</p>
@@ -181,7 +181,7 @@
 																<input id="userid" name="userid" maxlength="30" type="text">
 															</div>
 														</div>
-														<div class="col-sm-12 pb-2">
+														<div class="col-sm-12">
 															<p>อีเมล์
 
 															</p>
@@ -401,21 +401,21 @@
 											<div class="contact-form-wrapper">
 												<form>
 													<div class="row">
-														<div class="col-sm-12  mb-3">
+														<div class="col-sm-12">
 															<p>ชื่อผู้เข้าระบบ
 															</p>
 															<div class="input-wrapper">
 																<input id="name" name="name" maxlength="30" type="text">
 															</div>
 														</div>
-														<div class="col-sm-12 mb-3">
+														<div class="col-sm-12">
 															<p>รหัสผ่าน
 															</p>
 															<div class="input-wrapper ">
 																<input id="password" name="password" maxlength="30" type="password">
 															</div>
 														</div>
-														<div class="col-sm-12 mb-3">
+														<div class="col-sm-12">
 															<p>ยืนยันรหัสผ่าน
 															</p>
 															<div class="input-wrapper ">
@@ -524,7 +524,7 @@
 											</div>
 											<div class="contact-form-wrapper">
 												<form>
-													<div class="row mb-3">
+													<div class="row">
 														<div class="col-md-2">
 																	<p>คำนำหน้า
 																	</p>
@@ -552,7 +552,7 @@
 														</div>
 													</div>
 
-													<div class="row mb-3">
+													<div class="row">
 														<div class="col-md-6">
 															<p>เลขบัตรประชาชน
 															</p>
@@ -569,7 +569,7 @@
 														</div>
 													</div>
 
-													<div class="row pb-4">
+													<div class="row">
 														<div class="col-md-6 col-xs-12">
 															<p>อีเมล์
 															</p>
@@ -648,7 +648,7 @@
 												</div>
 												<div class="row">
 														<div class="col-md-6">
-																<div class="custom-radio-between">
+																<div class="custom-radio-between margin-top90">
 													                    <input value="101" id="101" name="rad1" type="radio" checked>
 													                    <label for="101"></label>
 													                    <span >ยอมรับ</span>
@@ -730,6 +730,6 @@
 		<canvas id="canvas">{{ myChart }}</canvas>
 	</div> -->
 
-	<div class="test">
+	<!-- <div class="test">
 		<p>test</p>
-	</div>
+	</div> -->
