--- a/src/assets/Content/default/sass/_variables.scss
+++ b/src/assets/Content/default/sass/_variables.scss
@@ -53,6 +53,7 @@ $color-red: #C90A11;
 $color-blue: #00698C;
 $color-green: #067169;
 $color-hover: #000;
+$color-little-gray: #f5f5f5;
 // $color-darkbrown: #595959;
 
 /* special theme */
