--- a/src/app/transaction/transaction.component.html
+++ b/src/app/transaction/transaction.component.html
@@ -13,13 +13,13 @@
                   <a  title="รายการขาย" (click)="checkpage('sell')">รายการขาย</a>
                 </li>
                 <li role="presentation" id="menu3">
-                  <a routerLink="/risk-assessment-form" title="รายการสับเปลี่ยน">รายการสับเปลี่ยน</a>
+                  <a  title="รายการสับเปลี่ยน">รายการสับเปลี่ยน</a>
                 </li>
                 <li role="presentation" id="menu4">
-                  <a routerLink="/risk-assessment-form" title="รายการตั้งซื้อขายล่วงหน้า">รายการตั้งซื้อขายล่วงหน้า</a>
+                  <a  title="รายการตั้งซื้อขายล่วงหน้า">รายการตั้งซื้อขายล่วงหน้า</a>
                 </li>
                 <li role="presentation" id="menu5">
-                  <a routerLink="/risk-assessment-form" title="รายการขายเพื่อซื้อ">รายการขายเพื่อซื้อ</a>
+                  <a  title="รายการขายเพื่อซื้อ">รายการขายเพื่อซื้อ</a>
                 </li>
 
               </ul>
@@ -50,11 +50,11 @@
 
                       </ul>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
 
-                      <p>เลขที่ผู้ถือหนวยลงทุน</p>
-                      <br/>
-                      <div class="select-wrapper inline-block width50">
+                      <p>เลขที่ผู้ถือหน่วยลงทุน</p>
+                      
+                      <div class="select-wrapper inline-block">
                         <select name="ddlLink" id="ddlLink">
                           <option value="0" selected="">9990244757</option>
                           <option value="36">9990244757</option>
@@ -62,11 +62,11 @@
                         </select>
                       </div>
                     </div>
-                    <div class="col-md-4">
-                      <p>ชื่อผู้ถือหนวยลงทุน</p>
+                    <div class="col-md-3">
+                      <p>ชื่อผู้ถือหน่วยลงทุน</p>
                       <span>เนติวัฒน์ โชติกร</span>
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-md-3">
                       <p>วันที่ทำรายงาน</p>
                       <span>7 มิถุนายน 2561</span>
                       <!-- <p>ยอดคงเหลือ ณ วันที่</p>
@@ -116,6 +116,25 @@
                         </div>
                       </div>
 
+                      <!-- <div class="col-md-3">
+                          <span>จำนวน</span>
+                        </div>
+                        <div class="col-md-6">
+                          <div class="input-wrapper ">
+                            <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="0">
+                          </div>
+                        </div>
+                        <div class="col-md-3">
+                          <div class="select-wrapper inline-block">
+  
+                            <select name="ddlLink" id="ddlLink">
+                              <option value="0" selected="">บาท</option>
+                              <option value="36">เยน</option>
+                              <option value="29">ดอลล่า</option>
+                            </select>
+                          </div>
+                        </div> -->
+
                     </div>
                   </div>
                   <div class="col-md-6">
@@ -143,7 +162,7 @@
                       </div>
                       <div class="col-md-9">
                         <div class="input-wrapper">
-                          <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="Please Select" name="date" type="text">
+                          <input class="form-control textinput dateinput bg-gray" id="startDate" placeholder="วว/ดด/ปปปป" name="date" type="text">
                         </div>
                       </div>
 
@@ -195,7 +214,7 @@
               <div class="tabs-menu-wrapper">
                 <ul class="nav nav-tabs" role="tablist" id="mutual-tab-menu">
                   <li role="presentation" id="menu1" >
-                    <a  title="รายการซื้อ" (click)="checkpage('purchase')">รายการซื้อ2</a>
+                    <a  title="รายการซื้อ" (click)="checkpage('purchase')">รายการซื้อ</a>
                   </li>
                   <li role="presentation" id="menu2" class="current">
                     <a  title="รายการขาย" (click)="checkpage('sell')">รายการขาย</a>
@@ -238,11 +257,11 @@
   
                         </ul>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
   
-                        <p>เลขที่ผู้ถือหนวยลงทุน</p>
-                        <br/>
-                        <div class="select-wrapper inline-block width50">
+                        <p>เลขที่ผู้ถือหน่วยลงทุน</p>
+                       
+                        <div class="select-wrapper inline-block">
                           <select name="ddlLink" id="ddlLink">
                             <option value="0" selected="">9990244757</option>
                             <option value="36">9990244757</option>
@@ -250,11 +269,11 @@
                           </select>
                         </div>
                       </div>
-                      <div class="col-md-4">
-                        <p>ชื่อผู้ถือหนวยลงทุน</p>
+                      <div class="col-md-3">
+                        <p>ชื่อผู้ถือหน่วยลงทุน</p>
                         <span>เนติวัฒน์ โชติกร</span>
                       </div>
-                      <div class="col-md-4">
+                      <div class="col-md-3">
                         <p>วันที่ทำรายงาน</p>
                         <span>7 มิถุนายน 2561</span>
                         <!-- <p>ยอดคงเหลือ ณ วันที่</p>
@@ -295,7 +314,7 @@
                   </div>
                   <div class="col-md-9">
                       <div class="table-responsive">
-                          <table class="table table-nav">
+                          <table class="table table-custom">
                               <thead>
                                   
                                   <tr>
@@ -313,23 +332,11 @@
                               <tbody>
                                   <tr>
                                       <td>
-                                          <a href="/MutualFund" title="ประเภทกองทุน">กองทุนรวมตราสารหนี้
+                                          <a href="/MutualFund" title="ประเภทกองทุน">6.2456
                                           </a>
                                       </td>
                                       <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
-                                          </a>
-                                      </td>
-                                      <td>
-                                          05/04/60
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          &nbsp;
-                                      </td>
-                                      <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
+                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">74.39
                                           </a>
                                       </td>
                                       <td>
@@ -337,128 +344,88 @@
                                       </td>
                                   </tr>
                                   <tr>
-                                      <td>
-                                          &nbsp;
-                                      </td>
-                                      <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
-                                          </a>
-                                      </td>
-                                      <td>
-                                          05/04/60
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          &nbsp;
-                                      </td>
-                                      <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
-                                          </a>
-                                      </td>
-                                      <td>
-                                          05/04/60
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          &nbsp;
-                                      </td>
-                                      <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
-                                          </a>
-                                      </td>
-                                      <td>
-                                          05/04/60
-                                      </td>
-                                  </tr>
+                                    <td>
+                                        <a href="/MutualFund" title="ประเภทกองทุน">6.2456
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">N/A
+                                        </a>
+                                    </td>
+                                    <td>
+                                        05/04/60
+                                    </td>
+                                </tr>                                  
                               </tbody>
-
-                              <tbody>
-                                  <tr>
-                                      <td>
-                                          <a href="/MutualFund" title="ประเภทกองทุน">กองทุนรวมตราสารหนี้ 2
-                                          </a>
-                                      </td>
-                                      <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
-                                          </a>
-                                      </td>
-                                      <td>
-                                          05/04/60
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          &nbsp;
-                                      </td>
-                                      <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
-                                          </a>
-                                      </td>
-                                      <td>
-                                          05/04/60
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          &nbsp;
-                                      </td>
-                                      <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
-                                          </a>
-                                      </td>
-                                      <td>
-                                          05/04/60
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          &nbsp;
-                                      </td>
-                                      <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
-                                          </a>
-                                      </td>
-                                      <td>
-                                          05/04/60
-                                      </td>
-                                  </tr>
-                                  <tr>
-                                      <td>
-                                          &nbsp;
-                                      </td>
-                                      <td>
-                                          <a href="/MutualFund/FundDetail" title="ชื่อกองทุน">กองทุนเปิด แอล เอช ตราสารหนี้ระยะสั้น พลัส
-                                          </a>
-                                      </td>
-                                      <td>
-                                          05/04/60
-                                      </td>
-                                  </tr>
-                              </tbody>
+                              
                           </table>
                       </div>
                   </div>
-  
-                  <div class="row mt-3">
-                    <div class="col text-right">
-                        <button class="btn-med btn-cancel width50" (click)="checkpage('signup1')" >
-                            ยกเลิก
-                              <i class="fa fa-angle-right" aria-hidden="true"></i>
-                            
-                          </button>
-                    </div>
-                    <div class="col text-left">
-                        <button class="btn-med btn-primary width50" (click)="checkpage('signup1')" >
-                            ตกลง
-                              <i class="fa fa-angle-right" aria-hidden="true"></i>
-                            
-                          </button>
-                    </div>
-                  </div>
+                  <div class="col-md-7">
+                      <div class="row">
+                          <div class="col-md-3">
+                            <span>จำนวน</span>
+                          </div>
+                          <div class="col-md-6">
+                            <div class="input-wrapper ">
+                              <input id="name" name="name" maxlength="30" type="text" class="bg-gray" placeholder="0">
+                            </div>
+                          </div>
+                          <div class="col-md-3">
+                            <div class="select-wrapper inline-block">
+    
+                              <select name="ddlLink" id="ddlLink">
+                                <option value="0" selected="">บาท</option>
+                                <option value="36">เยน</option>
+                                <option value="29">ดอลล่า</option>
+                              </select>
+                            </div>
+                          </div>
+
+                          <div class="col-md-3">
+                              <span>หักบัญชีธนาคาร</span>
+                            </div>
+                            <div class="col-md-9">
+                              <div class="select-wrapper inline-block">
+      
+                                <select name="ddlLink" id="ddlLink">
+                                  <option value="0" selected="">ธนาคารกรุงศรีอยุธยา จำกัด (มหาชน)</option>
+                                  <option value="36">ธนาคารกรุงศรีอยุธยา จำกัด (มหาชน)</option>
+                                  <option value="29">ธนาคารกรุงศรีอยุธยา จำกัด (มหาชน)</option>
+                                </select>
+                              </div>
+                            </div>
+
+                            <div class="col-md-9 offset-md-3 no-padding">
+                                <div class="row mt-3">                   
+      
+                          <div class="col text-left" >
+                              <button class="btn-med btn-cancel" (click)="checkpage('signup1')" >
+                                  ยกเลิก
+                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                  
+                                </button>
+                          </div>
+                          <div class="col text-right ">
+                              <button class="btn-med btn-primary" (click)="checkpage('signup1')" >
+                                  ตกลง
+                                    <i class="fa fa-angle-right" aria-hidden="true"></i>
+                                  
+                                </button>
+                          </div>
+                        </div>
+                              </div>
+                          
+                        </div>
+                        
+                    
                 </div>
-                <div class="detail-footer-wrapper">
+  
+                  
+                </div>
+                
+              </div>
+              <div class="detail-footer-wrapper">
                   <div class="row">
                     <div class="col-md-6 text-left">
                      <h4>รายการซื้อหน่วยลงทุน</h4> (รายการที่รอดำเนินการ)
@@ -473,7 +440,6 @@
                       </div>
                   </div>
                 </div>
-              </div>
             </div>
           </div>
         </div>
