update complete first phase v0

--- a/src/app/myport/myport.component.html
+++ b/src/app/myport/myport.component.html
@@ -307,6 +307,15 @@
                                                         <span>19/259 ซ.จุลดิส แขวงพญาไท เขตราชเทวี กรุงเทพมหานคร 10400</span>
                                                     </div>
                                                 </div>
+
+                                                <div class="detail-head-wrapper">
+                                                    <div class="col-md-6 text-left">
+                                                        <p class="no-margin">วันที่ทำแบบสอบถาม<span> 03/03/2563</span></p>
+                                                    </div>
+                                                    <div class="col-md-6 text-right">
+                                                            <p class="no-margin">NO.<span>01</span></p>
+                                                        </div>
+                                                </div>
                                               </div>
                                 </div>                               
                
